--- a/style.css
+++ b/style.css
@@ -71,6 +71,7 @@ nav ul li a:hover, a.active{
     padding: 2px;
     margin-top: 10px;
     word-spacing: 20px;
+    padding-left: 10px;
 }
 .booking-form  .calculations{
     margin: 10px 0;
@@ -119,4 +120,10 @@ nav ul li a:hover, a.active{
 .amount{
     display: flex;
     justify-content: space-between;
+}
+.plus, .minus{
+    width: 35px;
+    font-size: 25px;
+    color: #3352F2;
+    background-color: #fff;
 }
